added some explanation to the jupyter notebook file

--- a/BBN_Neff.ipynb
+++ b/BBN_Neff.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis for Cosmology with Independently Varying Neutrino Temperature and Number\n",
+    "\n",
+    "This is a jupyter notebook that is meant to illustrate the analysis that was done for [Cosmology with Independently Varying Neutrino Temperature and Number](https://arxiv.org/abs/1609.06351) by R. Galvez and R. J. Scherrer submitted to Physical Review Letters D.\n",
+    "\n",
+    "We sincerely hope that the code is self-explanatory in this notebook and that it helps follow-up studies. The file 'output' which is located in this same github project is the output from the numerical calculations we completed for this project utilizing the modification of the existing AlterBBN code (again, referenced in this github project).\n",
+    "\n",
+    "We also hope that this notebook could help guide beginners in producing publication quality plots using matplotlib.\n",
+    "\n",
+    "If there are any questions, they may be guided to richard.a.galvez who is at vanderbilt edu. Or, richardagalvez who is at gmail com.\n",
+    "\n",
+    "Best,\n",
+    "RG"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -32,18 +50,8 @@
    },
    "outputs": [],
    "source": [
-    "keys        =       ['Yp', 'H2ovH', 'He3ovH', 'Li7ovH', 'Li6ovH', 'Be7ovH', 'Neff', 'Nnu', 'alpha']\n",
-    "format = 'pdf'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "keys = ['Yp', 'H2ovH', 'He3ovH', 'Li7ovH', 'Li6ovH', 'Be7ovH', 'Neff', 'Nnu', 'alpha']\n",
+    "format = 'pdf'\n",
     "df  = pd.read_table('output', sep='\\t+', \n",
     "                    header=None, names = keys, index_col=['Nnu'], \n",
     "                    engine ='python')"
