--- a/BBN_Neff.ipynb
+++ b/BBN_Neff.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Analysis for Cosmology with Independently Varying Neutrino Temperature and Number\n",
     "\n",
-    "This is a jupyter notebook that is meant to illustrate the analysis that was done for [Cosmology with Independently Varying Neutrino Temperature and Number](https://arxiv.org/abs/1609.06351) by R. Galvez and R. J. Scherrer submitted to Physical Review Letters D.\n",
+    "This is a jupyter notebook that is meant to illustrate the analysis that was done for [Cosmology with Independently Varying Neutrino Temperature and Number](https://arxiv.org/abs/1609.06351) by R. Galvez and R. J. Scherrer submitted to Physical Review D.\n",
     "\n",
     "We sincerely hope that the code is self-explanatory in this notebook and that it helps follow-up studies. The file 'output' which is located in this same github project is the output from the numerical calculations we completed for this project utilizing the modification of the existing AlterBBN code (again, referenced in this github project).\n",
     "\n",
@@ -439,7 +439,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -453,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
